[package]
name = "discord_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread"] }
poise = { version = "0.6.1-rc1" }
songbird = { version = "0.4.0", features = ["builtin-queue"] }
dotenv = "0.15.0"
reqwest = "0.11.23"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "chrono", "client", "gateway", "model", "utils", "collector", "framework", "temp_cache", "voice"]
version = "0.12.0"

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac", "wav", "mkv", "ogg", "pcm"]